[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/player/sprites/GameJamIdleAngela.png" type="Texture" id=1]
[ext_resource path="res://src/player/angela.gd" type="Script" id=2]
[ext_resource path="res://src/player/stats/stats.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.34064

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.45975, 13.875 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.04832, 4.125 )

[node name="Angela" type="KinematicBody2D"]
collision_mask = 2147483662
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.625, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="CollisionsAreas" type="Node2D" parent="."]

[node name="HurtBox" type="Area2D" parent="CollisionsAreas"]
position = Vector2( 0, -2 )
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionsAreas/HurtBox"]
modulate = Color( 0.807843, 0, 0, 1 )
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="CollisionsAreas"]
modulate = Color( 0.156863, 0.882353, 0.329412, 1 )
position = Vector2( 0, 13 )
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionsAreas/HitBox"]
shape = SubResource( 3 )
[connection signal="health_changed" from="Stats" to="." method="_on_Stats_health_changed"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="CollisionsAreas/HurtBox" to="." method="_on_HurtBox_body_entered"]
